--- a/pages/icons-pack.html
+++ b/pages/icons-pack.html
@@ -1,15 +1,15 @@
 <text-block style="font-size:200%;">Каталог иконок</text-block>
-<text-block style="font-size:90%;">Толщина линии до конвертации 1.6px, закругление углов 3px.</text-block>
-<section class="section" id="iconsPack">
-  <div class="help">20 x 20</div>
+<text-block>Толщина линии до конвертации 1.6px, закругление углов 3px.</text-block>
+<section class="section">
+  <text-block>Размер: 20 x 20</text-block>
   <div class="content">
-    <icon-block name="home20"></icon-block>
-    <icon-block name="article20"></icon-block>
-    <icon-block name="search20"></icon-block>
-    <icon-block name="send20"></icon-block>
-    <icon-block name="bell20"></icon-block>
-    <icon-block name="gear20"></icon-block>
-    <icon-block name="cross20"></icon-block>
-    <icon-block name="cancel20"></icon-block>
+    <icon-block name="Home"></icon-block>
+    <icon-block name="Article"></icon-block>
+    <icon-block name="Search"></icon-block>
+    <icon-block name="Send"></icon-block>
+    <icon-block name="Bell"></icon-block>
+    <icon-block name="Gear"></icon-block>
+    <icon-block name="Cross"></icon-block>
+    <icon-block name="Cancel"></icon-block>
   </div>
 </section>
