--- a/pages/icons-pack.html
+++ b/pages/icons-pack.html
@@ -1,15 +1,13 @@
 <text-block style="font-size:200%;">Каталог иконок</text-block>
 <text-block>Толщина линии до конвертации 1.6px, закругление углов 3px.</text-block>
-<section class="section">
-  <text-block>Размер: 20 x 20</text-block>
-  <div class="content">
-    <icon-block name="Home"></icon-block>
-    <icon-block name="Article"></icon-block>
-    <icon-block name="Search"></icon-block>
-    <icon-block name="Send"></icon-block>
-    <icon-block name="Bell"></icon-block>
-    <icon-block name="Gear"></icon-block>
-    <icon-block name="Cross"></icon-block>
-    <icon-block name="Cancel"></icon-block>
-  </div>
+<text-block>20 x 20</text-block>
+<section class="section" style="flex-direction:row;gap:10px;">
+  <icon-block name="Home"></icon-block>
+  <icon-block name="Article"></icon-block>
+  <icon-block name="Search"></icon-block>
+  <icon-block name="Send"></icon-block>
+  <icon-block name="Bell"></icon-block>
+  <icon-block name="Gear"></icon-block>
+  <icon-block name="Cross"></icon-block>
+  <icon-block name="Cancel"></icon-block>
 </section>
