--- a/index.html
+++ b/index.html
@@ -15,21 +15,15 @@
     <div class="static"></div>
     <div class="dynamic">
       <div class="menuItem">
-        <span onclick="loadContent('pages/icons-pack.html')">
+        <span onclick="loadContent('pages/icons.html')">
           <icon-block name="Article"></icon-block>
-          <text-block>Каталог иконок</text-block>
+          <text-block>Каталог</text-block>
         </span>
       </div>
       <div class="menuItem">
         <span onclick="loadContent('pages/icon-block.html')">
           <icon-block name="Article"></icon-block>
           <text-block>Иконка</text-block>
-        </span>
-      </div>
-      <div class="menuItem">
-        <span onclick="loadContent('pages/text-block.html')">
-          <icon-block name="Article"></icon-block>
-          <text-block>Текст</text-block>
         </span>
       </div>
       <div class="menuItem">
