--- a/pages/button-block.html
+++ b/pages/button-block.html
@@ -1,11 +1,6 @@
-<text-block style="font-size:200%;">Кнопка</text-block>
-<section class="section">
-  <text-block>
-    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-  </text-block>
-</section>
-<section class="section example">
-  <div class="help">Минимальный вариант</div>
+<div class="title">Кнопка</div>
+<div class="section">
+  <div class="description">Минимальный вариант</div>
 
   <button-block>
     <icon-block name="Home"></icon-block>
@@ -15,11 +10,8 @@
 
   <button-block>
     <icon-block name="Home"></icon-block>
-    <text-block>Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст </text-block>
-  </button-block>
-
-  <button-block>
-    <text-block>Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст </text-block>
+    Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст
+    <icon-block name="Send"></icon-block>
   </button-block>
 
   <code><pre>
@@ -28,4 +20,4 @@
     &lt;text-block>Текст&lt;/text-block&gt;
     &lt;icon-block name="Send">&lt;/icon-block&gt;
   &lt;/button-block&gt;</pre></code>
-</section>
+</div>
