--- a/pages/icon-block.html
+++ b/pages/icon-block.html
@@ -1,15 +1,16 @@
-<text-block style="font-size:200%;">Иконка</text-block>
-<section class="section">
-  <text-block>name (HTML атрибут) - реактивный, обязательный. Латиница и цифры, начало с буквы. a-z A-Z 0-9</text-block>
-  <text-block>--width (CSS свойство) - 20px по умолчанию</text-block>
-  <text-block>--height (CSS свойство) - 20px по умолчанию</text-block>
-  <text-block>--fill (CSS свойство) - rgb(255,255,255) по умолчанию</text-block>
-</section>
-<section class="section">
-  <text-block class="help">Минимальный вариант</text-block>
+<div class="title">Иконка</div>
+<div class="section">
+  name (HTML атрибут) - реактивный, обязательный. Буквы (латиница) и цифры, начало с буквы. a-z A-Z 0-9<br /><br />
+  --width (CSS свойство) - 20px<br />
+  --height (CSS свойство) - 20px<br />
+  --fill (CSS свойство) - rgb(255,255,255)<br />
+  --stroke (CSS свойство) - none
+</div>
+<div class="section">
+  <div class="description">Минимальный вариант</div>
   <code>&lt;icon-block name="Icon"&gt;&lt;/icon-block&gt;</code>
-</section>
-<section class="section">
-  <text-block class="help">Полный вариант</text-block>
-  <code>&lt;icon-block name="Icon" style="--width:24;--height:24;--fill:red;"&gt;&lt;/icon-block&gt;</code>
-</section>
+</div>
+<div class="section">
+  <div class="description">Полный вариант</div>
+  <code>&lt;icon-block name="Icon" style="--width:24;--height:24;--fill:red;--stroke:red;"&gt;&lt;/icon-block&gt;</code>
+</div>
