--- a/pages/icons.html
+++ b/pages/icons.html
@@ -1,7 +1,6 @@
-<text-block style="font-size:200%;">Каталог иконок</text-block>
-<text-block>Толщина линии до конвертации 1.6px, закругление углов 3px.</text-block>
-<text-block>20 x 20</text-block>
-<section class="section" style="flex-direction:row;gap:10px;">
+<div class="title">Каталог</div>
+<div class="description">Толщина линии до конвертации 1.6px, закругление углов 3px. 20 x 20</div>
+<div class="section" style="flex-direction:row;">
   <icon-block name="Home"></icon-block>
   <icon-block name="Article"></icon-block>
   <icon-block name="Search"></icon-block>
@@ -10,4 +9,4 @@
   <icon-block name="Gear"></icon-block>
   <icon-block name="Cross"></icon-block>
   <icon-block name="Cancel"></icon-block>
-</section>
+</div>
