--- a/pages/text-block.html
+++ b/pages/text-block.html
@@ -1,12 +1,10 @@
-<text-block style="font-size:200%;">Текст</text-block>
-<section class="section">
-  <text-block>
+<div class="title">Текст</div>
+<div class="section">
   --font-family (CSS свойство) - --font-family-default по умолчанию<br />
   --font-size (CSS свойство) - 100% по умолчанию<br />
   --color (CSS свойство) - --rgb-255-255-255 по умолчанию
-  </text-block>
-</section>
-<section class="section">
-  <text-block class="help">Минимальный вариант</text-block>
+</div>
+<div class="section">
+  <div class="description">Минимальный вариант</div>
   <code>&lt;text-block&gt;Текст&lt;/text-block&gt;</code>
-</section>
+</div>
