--- a/index.html
+++ b/index.html
@@ -27,9 +27,21 @@
         </span>
       </div>
       <div class="menuItem">
+        <span onclick="loadContent('pages/text-block.html')">
+          <icon-block name="Article"></icon-block>
+          <text-block>Текст</text-block>
+        </span>
+      </div>
+      <div class="menuItem">
         <span onclick="loadContent('pages/button-block.html')">
           <icon-block name="Article"></icon-block>
           <text-block>Кнопка</text-block>
+        </span>
+      </div>
+      <div class="menuItem">
+        <span onclick="loadContent('pages/input-text.html')">
+          <icon-block name="Article"></icon-block>
+          <text-block>Ввод</text-block>
         </span>
       </div>
     </div>
