--- a/pages/icons.html
+++ b/pages/icons.html
@@ -1,5 +1,5 @@
 <div class="title">Каталог</div>
-<div class="description">Толщина линии до конвертации 1.6px, закругление углов 3px. 20 x 20</div>
+<div class="description">Толщина линии до конвертации: 1.6px. Закругление угла: 3px. Размер: 20 x 20</div>
 <div class="section" style="flex-direction:row;">
   <icon-block name="Home"></icon-block>
   <icon-block name="Article"></icon-block>
