--- a/pages/text-block.html
+++ b/pages/text-block.html
@@ -1,10 +1,11 @@
 <div class="title">Текст</div>
 <div class="section">
-  --font-family (CSS свойство) - --font-family-default по умолчанию<br />
-  --font-size (CSS свойство) - 100% по умолчанию<br />
-  --color (CSS свойство) - --rgb-255-255-255 по умолчанию
+  Особенность: CSS свойство flex-grow:1 
 </div>
 <div class="section">
   <div class="description">Минимальный вариант</div>
+  <br>
   <code>&lt;text-block&gt;Текст&lt;/text-block&gt;</code>
+  <br>
+  <text-block>Текст</text-block>
 </div>
