--- a/pages/input-text.html
+++ b/pages/input-text.html
@@ -1,62 +1,16 @@
-<div class="title">Кнопка</div>
+<div class="title">Поле ввода</div>
 <div class="section">
-  <div class="description">Иконка</div>
+  <div class="description">Поле</div>
   <br>
   <code>
-<pre>&lt;button-block&gt;
-  &lt;icon-block name="Home"&lt;/icon-block&gt;
-&lt;/button-block&gt;</pre>
+<pre>&lt;input-text&gt;
+  &lt;text-block&lt;/text-block&gt;
+&lt;/input-text&gt;</pre>
   </code>
   <br>
-  <button-block>
+  <input-text>
     <icon-block name="Home"></icon-block>
-  </button-block>
-</div>
-
-<div class="section">
-  <div class="description">Текст</div>
-  <br>
-  <code>
-<pre>&lt;button-block&gt;
-  &lt;text-block>Текст&lt;/text-block&gt;
-&lt;/button-block&gt;</pre>
-  </code>
-  <br>
-  <button-block>
-    <text-block>Сохранить</text-block>
-  </button-block>
-</div>
-
-<div class="section">
-  <div class="description">Две иконки и фиксированная ширина 300px</div>
-  <br>
-  <code>
-<pre>&lt;button-block style="width:300px"&gt;
-  &lt;icon-block name="Home"&gt;&lt;/icon-block&gt;
-  &lt;text-block>Текст&lt;/text-block&gt;
-  &lt;icon-block name="Send">&lt;/icon-block&gt;
-&lt;/button-block&gt;</pre>
-  </code>
-  <br>
-  <button-block style="width:300px">
-    <icon-block name="Home"></icon-block>
-    <text-block>Текст</text-block>
+    <input style="height:40px">
     <icon-block name="Send"></icon-block>
-  </button-block>
-</div>
-
-<div class="section">
-  <div class="description">Одна иконка, ширина 200px, выравнивание текста по левую сторону</div>
-  <br>
-  <code>
-<pre>&lt;button-block style="width:200px;text-align:left;"&gt;
-  &lt;text-block>Текст&lt;/text-block&gt;
-  &lt;icon-block name="Send">&lt;/icon-block&gt;
-&lt;/button-block&gt;</pre>
-  </code>
-  <br>
-  <button-block style="width:200px;text-align:left;">
-    <text-block>Текст</text-block>
-    <icon-block name="Send"></icon-block>
-  </button-block>
+  </input-text>
 </div>
