--- a/pages/input-text.html
+++ b/pages/input-text.html
@@ -10,7 +10,7 @@
   <br>
   <input-text>
     <icon-block name="Home"></icon-block>
-    <input style="height:40px">
+    <input>
     <icon-block name="Send"></icon-block>
   </input-text>
 </div>
