--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </span>
       </div>
       <div class="menuItem">
-        <span onclick="loadContent('pages/input-text.html')">
+        <span onclick="loadContent('pages/input-block.html')">
           <icon-block name="Article"></icon-block>
           <text-block>Поле ввода</text-block>
         </span>
@@ -54,7 +54,7 @@
 <script id="script"></script>
 
 <script>
-loadContent('pages/input-text.html');
+loadContent('pages/input-block.html');
 function loadContent(page){
   fetch(page)
   .then(response => response.text())
@@ -75,6 +75,6 @@ function loadContent(page){
 <script type="module" src="library/icon-block.js"></script>
 <script type="module" src="library/text-block.js"></script>
 <script type="module" src="library/button-block.js"></script>
-<script type="module" src="library/input-text.js"></script>
+<script type="module" src="library/input-block.js"></script>
 </body>
 </html>
