--- a/pages/icons.html
+++ b/pages/icons.html
@@ -8,5 +8,5 @@
   <icon-block name="Bell"></icon-block>
   <icon-block name="Gear"></icon-block>
   <icon-block name="Cross"></icon-block>
-  <icon-block name="Cancel"></icon-block>
+  <icon-block name="InputClear"></icon-block>
 </div>
