--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width">
 <title>Web Components</title>
 <link rel="stylesheet" href="theme.css">
+<link rel="stylesheet" href="library/library.css">
 </head>
 <body>
 
