--- a/pages/input-block.html
+++ b/pages/input-block.html
@@ -1,7 +1,5 @@
 <div class="title">Поле ввода</div>
 <div class="section">
-  <div class="description">Поле</div>
-  <br>
   <code>
 <pre>&lt;input-block&gt;
   &lt;icon-block name="Home"&gt;&lt;/icon-block&gt;
@@ -13,7 +11,7 @@
   <input-block>
     <icon-block name="Home"></icon-block>
     <input>
-    <icon-block name="Cancel"></icon-block>
+    <icon-block name="InputClear"></icon-block>
     <icon-block name="Send"></icon-block>
   </input-block>
 </div>
