--- a/pages/input-block.html
+++ b/pages/input-block.html
@@ -3,15 +3,12 @@
   <code>
 <pre>&lt;input-block&gt;
   &lt;icon-block name="Home"&gt;&lt;/icon-block&gt;
-  &lt;text-block&gt;&lt;/text-block&gt;
+  &lt;input&gt;
   &lt;icon-block name="Send"&gt;&lt;/icon-block&gt;
 &lt;/input-block&gt;</pre>
   </code>
   <br>
-  <input-block>
-    <icon-block name="Home"></icon-block>
-    <input>
-    <icon-block name="InputClear"></icon-block>
-    <icon-block name="Send"></icon-block>
-  </input-block>
+  <input-block></input-block>
+  <br><br>
+  <input-block before="Home" after="Send"></input-block>
 </div>
