--- a/pages/input-block.html
+++ b/pages/input-block.html
@@ -1,14 +1,8 @@
 <div class="title">Поле ввода</div>
 <div class="section">
   <code>
-<pre>&lt;input-block&gt;
-  &lt;icon-block name="Home"&gt;&lt;/icon-block&gt;
-  &lt;input&gt;
-  &lt;icon-block name="Send"&gt;&lt;/icon-block&gt;
-&lt;/input-block&gt;</pre>
+<pre>&lt;input-block before="Home" after="Send"&gt;&lt;/input-block&gt;</pre>
   </code>
   <br>
-  <input-block></input-block>
-  <br><br>
-  <input-block before="Home" after="Send"></input-block>
+  <input-block type="password" before="Home" after="Send"></input-block>
 </div>
