--- a/pages/input-block.html
+++ b/pages/input-block.html
@@ -1,8 +1,27 @@
 <div class="title">Поле ввода</div>
 <div class="section">
   <code>
-<pre>&lt;input-block before="Home" after="Send"&gt;&lt;/input-block&gt;</pre>
+&lt;input-block
+label="Заголовок" hint="Подсказка" placeholder="Введите имя" before="Article" after="Gear"&gt;&lt;/input-block&gt;
   </code>
+
   <br>
-  <input-block type="password" before="Home" after="Send"></input-block>
+  <input-block
+    label="Заголовок"
+    hint="Подсказка"
+    placeholder="Введите название"
+    before="Article"
+    after="Bell">
+  </input-block>
+
+  <br><br>
+  <input-block ></input-block>
+
+  <br><br>
+  <input-block
+    label="Имя пользователя"
+    placeholder="Имя"
+    before="Article">
+  </input-block>
+
 </div>
