--- a/pages/input-block.html
+++ b/pages/input-block.html
@@ -9,7 +9,7 @@ label="Заголовок" hint="Подсказка" placeholder="Введите
   <input-block
     label="Заголовок"
     hint="Подсказка"
-    placeholder="Введите название"
+    placeholder="Заглушка"
     before="Article"
     after="Bell">
   </input-block>
