--- a/pages/input-block.html
+++ b/pages/input-block.html
@@ -1,27 +1,15 @@
 <div class="title">Поле ввода</div>
+
 <div class="section">
   <code>
-&lt;input-block
-label="Заголовок" hint="Подсказка" placeholder="Введите имя" before="Article" after="Gear"&gt;&lt;/input-block&gt;
+    &lt;input-block&gt;&lt;/input-block&gt;
   </code>
+  <input-block></input-block>
+</div>
 
-  <br>
-  <input-block
-    label="Заголовок"
-    hint="Подсказка"
-    placeholder="Заглушка"
-    before="Article"
-    after="Bell">
-  </input-block>
-
-  <br><br>
-  <input-block ></input-block>
-
-  <br><br>
-  <input-block
-    label="Имя пользователя"
-    placeholder="Имя"
-    before="Article">
-  </input-block>
-
+<div class="section">
+  <code>
+    &lt;input-block placeholder="Э-почта" before="Article" after="Bell" type="email"&gt;&lt;/input-block&gt;
+  </code>
+  <input-block placeholder="Э-почта" before="Article" after="Bell" type="email"></input-block>
 </div>
