--- a/pages/button-block.html
+++ b/pages/button-block.html
@@ -1,50 +1,22 @@
 <div class="title">Кнопка</div>
+
 <div class="section">
   <code>
-<pre>&lt;button-block&gt;
-  &lt;icon-block name="Home"&lt;/icon-block&gt;
-&lt;/button-block&gt;</pre>
+  &lt;button-block before="Article"&gt;&lt;/button-block&gt;
   </code>
-  <button-block>
-    <icon-block name="Home"></icon-block>
-  </button-block>
+  <button-block before="Article"></button-block>
 </div>
 
 <div class="section">
   <code>
-<pre>&lt;button-block&gt;
-  &lt;text-block>Текст&lt;/text-block&gt;
-&lt;/button-block&gt;</pre>
+  &lt;button-block before="Article"&gt;&lt;/button-block&gt;
   </code>
-  <button-block>
-    <text-block>Сохранить</text-block>
-  </button-block>
+  <button-block before="Article" text="Кнопка"></button-block>
 </div>
 
 <div class="section">
   <code>
-<pre>&lt;button-block style="width:300px"&gt;
-  &lt;icon-block name="Home"&gt;&lt;/icon-block&gt;
-  &lt;text-block>Текст&lt;/text-block&gt;
-  &lt;icon-block name="Send">&lt;/icon-block&gt;
-&lt;/button-block&gt;</pre>
+  &lt;button-block before="Article" after="Bell" text="Кнопка"&gt;&lt;/button-block&gt;
   </code>
-  <button-block style="width:300px">
-    <icon-block name="Home"></icon-block>
-    <text-block>Текст</text-block>
-    <icon-block name="Send"></icon-block>
-  </button-block>
-</div>
-
-<div class="section">
-  <code>
-<pre>&lt;button-block style="width:200px;text-align:left;"&gt;
-  &lt;text-block>Текст&lt;/text-block&gt;
-  &lt;icon-block name="Send">&lt;/icon-block&gt;
-&lt;/button-block&gt;</pre>
-  </code>
-  <button-block style="width:200px;text-align:left;">
-    <text-block>Текст</text-block>
-    <icon-block name="Send"></icon-block>
-  </button-block>
+  <button-block before="Article" after="Bell" text="Кнопка"></button-block>
 </div>
