--- a/pages/icons-pack.html
+++ b/pages/icons-pack.html
@@ -13,7 +13,7 @@
 </div>
 
 <section>
-  <button onclick="changeIconName()">Всё</button>
+  <button onclick="changeIconName()">Тест замены</button>
   <script>
     function changeIconAttribute(attribute, values) {
       const iconBlock = document.getElementById('test');
