--- a/pages/input-block.html
+++ b/pages/input-block.html
@@ -9,7 +9,7 @@
 
 <div class="section">
   <code>
-    &lt;input-block placeholder="Э-почта" before="Article" after="Bell" type="email"&gt;&lt;/input-block&gt;
+    &lt;input-block before="Article" after="Bell" type="email" placeholder="Э-почта"&gt;&lt;/input-block&gt;
   </code>
   <input-block placeholder="Э-почта" before="Article" after="Bell" type="email"></input-block>
 </div>
