--- a/pages/button-block.html
+++ b/pages/button-block.html
@@ -9,7 +9,7 @@
 
 <div class="section">
   <code>
-  &lt;button-block before="Article"&gt;&lt;/button-block&gt;
+  &lt;button-block before="Article" text="Кнопка"&gt;&lt;/button-block&gt;
   </code>
   <button-block before="Article" text="Кнопка"></button-block>
 </div>
@@ -18,5 +18,5 @@
   <code>
   &lt;button-block before="Article" after="Bell" text="Кнопка"&gt;&lt;/button-block&gt;
   </code>
-  <button-block before="Article" after="Bell" text="Кнопка"></button-block>
+  <button-block id="test" before="Article" after="Bell" text="Кнопка"></button-block>
 </div>
