--- a/pages/icon-block.html
+++ b/pages/icon-block.html
@@ -7,6 +7,6 @@
 </div>
 
 <div class="section">
-  <code>&lt;icon-block name="Icon"&gt;&lt;/icon-block&gt;</code>
+  <code>&lt;icon-block name="Home"&gt;&lt;/icon-block&gt;</code>
   <icon-block name="Home"></icon-block>
 </div>
