--- a/pages/button-block.html
+++ b/pages/button-block.html
@@ -9,9 +9,9 @@
 
 <div class="section">
   <code>
-  &lt;button-block before="Article" text="Кнопка"&gt;&lt;/button-block&gt;
+  &lt;button-block text="Кнопка"&gt;&lt;/button-block&gt;
   </code>
-  <button-block before="Article" text="Кнопка"></button-block>
+  <button-block text="Кнопка"></button-block>
 </div>
 
 <div class="section">
