--- a/pages/input-block.html
+++ b/pages/input-block.html
@@ -11,5 +11,5 @@
   <code>
     &lt;input-block before="Article" after="Bell" type="email" placeholder="Э-почта"&gt;&lt;/input-block&gt;
   </code>
-  <input-block placeholder="Э-почта" before="Article" after="Bell" type="email"></input-block>
+  <input-block placeholder="Э-почта" before="Article" after="Bell" type="tel"></input-block>
 </div>
