--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <script id="script"></script>
 
 <script>
-loadContent('pages/input-block.html');
+loadContent('pages/form-field.html');
 function loadContent(page){
   fetch(page)
   .then(response => response.text())
