--- a/pages/button-block.html
+++ b/pages/button-block.html
@@ -18,5 +18,5 @@
   <code>
   &lt;button-block before="Article" after="Bell" text="Кнопка"&gt;&lt;/button-block&gt;
   </code>
-  <button-block id="test" before="Article" after="Bell" text="Кнопка"></button-block>
+  <button-block id="test" before="Article" after="Bell<script>" text="Кнопка"></button-block>
 </div>
