--- a/pages/form-field.html
+++ b/pages/form-field.html
@@ -7,6 +7,6 @@
   &lt;/form-field&gt;
   </code>
   <form-field label="Заголовок" hint="Подсказка">
-    <input-block placeholder="Пароль" before="Article" after="Bell" type="password"></input-block>
+    <input-block placeholder="Пароль" before="Article" after="Bell" type="password" required></input-block>
   </form-field>
 </div>
