--- a/index.html
+++ b/index.html
@@ -16,38 +16,26 @@
     <div class="dynamic">
       <div class="menuItem">
         <span onclick="loadContent('pages/icons-pack.html')">
-          <icon-block name="Article"></icon-block>
+          <icon-block icon="Article"></icon-block>
           <text-block>Каталог</text-block>
         </span>
       </div>
       <div class="menuItem">
         <span onclick="loadContent('pages/icon-block.html')">
-          <icon-block name="Article"></icon-block>
+          <icon-block icon="Article"></icon-block>
           <text-block>Иконка</text-block>
         </span>
       </div>
       <div class="menuItem">
-        <span onclick="loadContent('pages/text-block.html')">
-          <icon-block name="Article"></icon-block>
-          <text-block>Текст</text-block>
-        </span>
-      </div>
-      <div class="menuItem">
         <span onclick="loadContent('pages/button-block.html')">
-          <icon-block name="Article"></icon-block>
+          <icon-block icon="Article"></icon-block>
           <text-block>Кнопка</text-block>
         </span>
       </div>
       <div class="menuItem">
         <span onclick="loadContent('pages/input-block.html')">
-          <icon-block name="Article"></icon-block>
+          <icon-block icon="Article"></icon-block>
           <text-block>Поле ввода</text-block>
-        </span>
-      </div>
-      <div class="menuItem">
-        <span onclick="loadContent('pages/form-field.html')">
-          <icon-block name="Article"></icon-block>
-          <text-block>Поле формы</text-block>
         </span>
       </div>
     </div>
@@ -60,7 +48,7 @@
 <script id="script"></script>
 
 <script>
-loadContent('pages/form-field.html');
+loadContent('pages/input-block.html');
 function loadContent(page){
   fetch(page)
   .then(response => response.text())
@@ -79,9 +67,7 @@ function loadContent(page){
 </script>
 
 <script type="module" src="library/icon-block.js"></script>
-<script type="module" src="library/text-block.js"></script>
 <script type="module" src="library/button-block.js"></script>
 <script type="module" src="library/input-block.js"></script>
-<script type="module" src="library/form-field.js"></script>
 </body>
 </html>
