--- a/pages/button-block.html
+++ b/pages/button-block.html
@@ -4,7 +4,7 @@
   <code>
   &lt;button-block before="Article"&gt;&lt;/button-block&gt;
   </code>
-  <button-block before="Article"></button-block>
+  <button-block icon-before="Article"></button-block>
 </div>
 
 <div class="section">
@@ -18,5 +18,5 @@
   <code>
   &lt;button-block before="Article" after="Bell" text="Кнопка"&gt;&lt;/button-block&gt;
   </code>
-  <button-block id="test" before="Article" after="Bell" text="Кнопка"></button-block>
+  <button-block id="test" icon-before="Article" icon-after="Bell" text="Кнопка"></button-block>
 </div>
