--- a/pages/icons-pack.html
+++ b/pages/icons-pack.html
@@ -2,14 +2,14 @@
 <div class="description">Толщина линии до конвертации: 1.6px. Закругление угла: 3px. Размер: 20 x 20</div>
 
 <div class="section" style="flex-direction:row;gap:10px;">
-  <icon-block id="test" name="Home"></icon-block>
-  <icon-block name="Article"></icon-block>
-  <icon-block name="Search"></icon-block>
-  <icon-block name="Send"></icon-block>
-  <icon-block name="Bell"></icon-block>
-  <icon-block name="Gear"></icon-block>
-  <icon-block name="Cross"></icon-block>
-  <icon-block name="InputClear"></icon-block>
+  <icon-block icon="Home" id="test"></icon-block>
+  <icon-block icon="Article"></icon-block>
+  <icon-block icon="Search"></icon-block>
+  <icon-block icon="Send"></icon-block>
+  <icon-block icon="Bell"></icon-block>
+  <icon-block icon="Gear"></icon-block>
+  <icon-block icon="Cross"></icon-block>
+  <icon-block icon="InputClear"></icon-block>
 </div>
 
 <button-block onclick="changeIconName()" text="Тест реактивности"></button-block>
@@ -27,5 +27,5 @@
   }
 
   function changeIconName(){
-    changeIconAttribute('name',['Search','Send','Gear']);}
+    changeIconAttribute('icon',['Search','Send','Gear']);}
 </script>
