--- a/pages/input-block.html
+++ b/pages/input-block.html
@@ -9,7 +9,16 @@
 
 <div class="section">
   <code>
-    &lt;input-block before="Article" after="Bell" type="email" placeholder="Э-почта"&gt;&lt;/input-block&gt;
+    &lt;input-block icon-before="Article" icon-after="Bell" type="email" placeholder="Э-почта"&gt;&lt;/input-block&gt;
   </code>
-  <input-block placeholder="Э-почта" before="Article" after="Bell" type="tel"></input-block>
+  <input-block icon-before="Article" icon-after="Bell" type="tel" placeholder="Э-почта"></input-block>
+</div>
+
+<div class="section">
+  <code>
+  &lt;input-block label="Заголовок" hint="Подсказка" placeholder="Пароль" before="Article" after="Bell" type="password"&gt;&lt;/input-block&gt;
+  </code>
+
+  <input-block id="test" label="Заголовок" hint="Подсказка" placeholder="Пароль" icon-before="Article" icon-after="Bell" type="password" required>
+  </input-block>
 </div>
