--- a/pages/icons-pack.html
+++ b/pages/icons-pack.html
@@ -9,7 +9,7 @@
   <icon-block icon="Bell"></icon-block>
   <icon-block icon="Gear"></icon-block>
   <icon-block icon="Cross"></icon-block>
-  <icon-block icon="InputClear"></icon-block>
+  <icon-block icon="Clear"></icon-block>
 </div>
 
 <button-block onclick="changeIconName()" text="Тест реактивности"></button-block>
