--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ function loadContent(page){
 }
 </script>
 
-<script type="module" src="library/icon-block.js"></script>
-<script type="module" src="library/button-block.js"></script>
-<script type="module" src="library/input-block.js"></script>
+<script type="module" src="components/icon-block.js"></script>
+<script type="module" src="components/button-block.js"></script>
+<script type="module" src="components/input-block.js"></script>
 </body>
 </html>
