--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ function loadContent(page){
 </script>
 
 <script type="module" src="components/icon-block.js"></script>
+<script type="module" src="components/text-block.js"></script>
 <script type="module" src="components/button-block.js"></script>
 <script type="module" src="components/input-block.js"></script>
 </body>
