--- a/pages/input-block.html
+++ b/pages/input-block.html
@@ -9,9 +9,9 @@
 
 <div class="section">
   <code>
-    &lt;input-block icon-before="Article" icon-after="Bell" type="email" placeholder="Э-почта"&gt;&lt;/input-block&gt;
+    &lt;input-block icon-before="Article" type="email" placeholder="Э-почта"&gt;&lt;/input-block&gt;
   </code>
-  <input-block icon-before="Article" icon-after="Bell" type="tel" placeholder="Э-почта"></input-block>
+  <input-block icon-before="Article" type="tel" placeholder="Э-почта"></input-block>
 </div>
 
 <div class="section">
