--- a/pages/icon-block.html
+++ b/pages/icon-block.html
@@ -1,12 +1,12 @@
 <div class="title">Иконка</div>
 
 <div class="section">
-  icon (HTML атрибут) - реактивный, обязательный.<br>Буквы (латиница) и цифры, начало с буквы. a-z A-Z 0-9<br><br>
+  name (HTML атрибут) - реактивный, обязательный.<br>Буквы (латиница) и цифры, начало с буквы. a-z A-Z 0-9<br><br>
   fill - currentColor<br>
   Цвет svg зависит от цвета шрифта указанного в родительском элементе. 
 </div>
 
 <div class="section">
-  <code>&lt;icon-block icon="Home"&gt;&lt;/icon-block&gt;</code>
-  <icon-block icon="Home"></icon-block>
+  <code>&lt;icon-block name="Home"&gt;&lt;/icon-block&gt;</code>
+  <icon-block name="Home"></icon-block>
 </div>
