--- a/pages/icons-pack.html
+++ b/pages/icons-pack.html
@@ -2,17 +2,17 @@
 <div class="description">Толщина линии до конвертации: 1.6px. Закругление угла: 3px. Размер: 20 x 20</div>
 
 <div class="section" style="flex-direction:row;gap:10px;">
-  <icon-block icon="Home" id="test"></icon-block>
-  <icon-block icon="Article"></icon-block>
-  <icon-block icon="Search"></icon-block>
-  <icon-block icon="Send"></icon-block>
-  <icon-block icon="Bell"></icon-block>
-  <icon-block icon="Gear"></icon-block>
-  <icon-block icon="Cross"></icon-block>
-  <icon-block icon="Clear"></icon-block>
+  <icon-block name="Home" id="test"></icon-block>
+  <icon-block name="Article"></icon-block>
+  <icon-block name="Search"></icon-block>
+  <icon-block name="Send"></icon-block>
+  <icon-block name="Bell"></icon-block>
+  <icon-block name="Gear"></icon-block>
+  <icon-block name="Cross"></icon-block>
+  <icon-block name="Clear"></icon-block>
 </div>
 
-<button-block onclick="changeIconName()" text="Тест реактивности"></button-block>
+<button-block onclick="changeIconName()" label="Тест реактивности"></button-block>
 <script>
   function changeIconAttribute(attribute, values) {
     const iconBlock = document.getElementById('test');
@@ -27,5 +27,5 @@
   }
 
   function changeIconName(){
-    changeIconAttribute('icon',['Search','Send','Gear']);}
+    changeIconAttribute('name',['Search','Send','Gear']);}
 </script>
